# ternary_alpha

./: README.md  pyproject.toml
examples/: deep_network_example.py
scripts/: demo_alpha.py  demo_bravo.py  help.py
src/ternary_alpha/: __init__.py  inference.py  network.py  utils.py
ternary_alpha/: network.py
tests/: test_network.py
